Fix navbar link text contrast

--- a/src/stylesheets/_variables.scss
+++ b/src/stylesheets/_variables.scss
@@ -20,5 +20,5 @@ $info:    $blue;
 $font-family-sans-serif:  'Open Sans', Arial, sans-serif;
 
 // Nav
-$navbar-dark-color:                 rgba($white, .8) !default;
-$navbar-dark-hover-color:           rgba($white, .9) !default;
+$navbar-dark-color:                 rgba($white, 0.8) !default;
+$navbar-dark-hover-color:           rgba($white, 0.9) !default;
